[project]
name = "tennis-booking-assistant"
version = "0.1.0"
description = "A tennis booking assistant using OpenAI and agents"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "agents>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "gradio>=4.0.0",
]



[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
