[project]
name = "tennis-booking-assistant"
version = "0.1.0"
description = "A tennis booking assistant using OpenAI and agents"
authors = [
    {name = "Christoph Pernul", email = "cpernul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.85.0",
    "openai-agents>=0.0.17",
    "httpx>=0.28.1",
    "bs4>=0.0.2",
    "requests>=2.32.4",
    "python-dotenv>=1.1.0",
    "setuptools>=80.9.0",
    "chainlit>=2.8.3"
]



[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
